ui-tests/tests/fail/inferred-recursive.rs
use mic::{answer, solve};

#[answer]
fn main() -> _ {
    if false {
        main();
    }
    ""
}

#[solve]
fn solve() -> _ {
    if false {
        solve();
    }
    ""
}
